// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon.native renders a snapshot 1`] = `
<mapProps(Styled(Image))
  size={24}
  src="any source"
/>
`;

exports[`Icon.native renders a snapshot with \`size:large\` 1`] = `
<mapProps(Styled(Image))
  size={48}
  src="any source"
/>
`;

exports[`Icon.native renders a snapshot with \`size:small\` 1`] = `
<mapProps(Styled(Image))
  size={12}
  src="any source"
/>
`;
